# DSL_Exercises

./: pyproject.toml
src/: log.py
src/data/: U1H1_spiral.py  U1H2_MNIST.py
src/entrypoints/: U1H1.py  U1H2.py
src/modelling/: autoencoder.py  linear_pytorch.py
src/visualization/: U1H1_vis.py
